--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>calculator</groupId>
+            <artifactId>calculator</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>D:/ATM Program/ATM2017Q2.HometaskM3.1/src/main/resources/calculator-1.0.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
