--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
             <artifactId>calculator</artifactId>
             <version>1.0</version>
             <scope>system</scope>
-            <systemPath>D:/ATM Program/ATM2017Q2.HometaskM3.1/src/main/resources/calculator-1.0.jar</systemPath>
+            <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
